Ready with minor issues, tested in IE8-IE10 and latest Chrome, Firefox, Opera (tested on Mac).
Known issues:

 * there is no .select2-chosen in Select2 v.3.3.2, thus no padding and line-height – not ready for 3.3.2 yet
 * IE9/IE10: Select2 in "Bootstrap Input Group" misses 1px in height (bug inherited from Bootstrap 3, @see http://getbootstrap.com/components/#input-groups-sizing)
 * IE9/IE10: Select2 in "Bootstrap Input Group with Button addon" also misses 1px in height (bug _not_ inherited from Bootstrap 3)
 * focus and box-shadow for .select2-search input do not fit Bootstrap's defaults
 * Select2 dropdown could inherit look-and-feel from Bootstrap dropdowns
 * checkboxes and radio-buttons in "Bootstrap Input Groups" could be vertically aligned to the top (instead of center) if combined with a multi Select2 to address variable height of the Select2 container
 * examples-page label=for and select#ids are a mess

--- a/_jekyll/css/select2-bootstrap.css
+++ b/_jekyll/css/select2-bootstrap.css
@@ -53,7 +53,7 @@
  * Adjust Select2 input heights to match the Bootstrap default.
  */
 .select2-container .select2-choice {
-  min-height: 34px;
+  height: 34px;
   line-height: 1.42857;
 }
 
@@ -71,14 +71,14 @@
  */
 .select2-container.input-sm .select2-choice,
 .input-group-sm .select2-container .select2-choice {
-  min-height: 30px;
+  height: 30px;
   line-height: 1.5;
   border-radius: 3px;
 }
 
 .select2-container.input-lg .select2-choice,
 .input-group-lg .select2-container .select2-choice {
-  min-height: 45px;
+  height: 45px;
   line-height: 1.33;
   border-radius: 6px;
 }
@@ -136,7 +136,7 @@
 
 .select2-container-multi.input-lg .select2-choices .select2-search-choice,
 .input-group-lg .select2-container-multi .select2-choices .select2-search-choice {
-  line-height: 22px;
+  line-height: 24px;
 }
 
 /**
